<resources>
    <string name="app_name">注册</string>
    <string name="page_title">注册</string>
    <string name="hint_name">请输入用户名</string>
    <string name="hint_email">请输入邮箱地址</string>
    <string name="hint_password">请输入密码</string>
    <string name="label_name">名字</string>
    <string name="label_email">邮箱</string>
    <string name="label_password">密码</string>
    <string name="label_sex_short">性别</string>
    <string name="sex_boy">男</string>
    <string name="sex_girl">女</string>
    <string name="hobby_sing">唱歌</string>
    <string name="hobby_dance">跳舞</string>
    <string name="hobby_read">阅读</string>
    <string name="hobby_read_alt">读书</string>
    <string name="label_hobby_prompt">请选择兴趣爱好：</string>
    <string name="btn_submit">提交</string>
    <string name="login_qq_register">用QQ注册</string>
    <string name="login_wechat_register">用微信注册</string>
    <string name="login_email_register">使用电子邮箱注册</string>
    <string name="toast_name_empty">用户名不能为空</string>
    <string name="toast_email_empty">邮箱不能为空</string>
    <string name="toast_password_empty">密码不能为空</string>
    <string name="toast_sex_empty">请选择性别</string>
    <string name="toast_hobby_empty">请至少选择一个兴趣爱好</string>
    <string name="toast_register_success">注册成功
用户名：%1$s
邮箱：%2$s
性别：%3$s
兴趣爱好：%4$s</string>
    <string name="desc_qq_icon">QQ 登录图标</string>
    <string name="desc_wechat_icon">微信登录图标</string>
    <string name="desc_email_icon">邮箱登录图标</string>
</resources>
